fix: merge the portal address
merge the portal's portal to 3030

--- a/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
+++ b/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
@@ -21,7 +21,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.KUBEAPPS' | translate"
-    href="https://192.168.112.26:3045/appcatalog/#/apps/ns/default"
+    href="/appcatalog/#/apps/ns/default"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="blocks-group"></clr-icon>
@@ -38,7 +38,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.LOG' | translate"
-    href="https://192.168.112.26:3045/log/app/logtrail#/?q=kubernetes.container.name:httpbin&h=All&t=Now&i=filebeat-*&_g=()"
+    href="/log/app/logtrail#/?q=kubernetes.container.name:httpbin&h=All&t=Now&i=filebeat-*&_g=()"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
@@ -66,7 +66,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.PROMETHEUS' | translate"
-    href="https://192.168.112.26:3045/prometheus/"
+    href="/prometheus/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="network-globe"></clr-icon>
@@ -75,7 +75,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.GRAFANA' | translate"
-    href="https://192.168.112.26:3045/grafana/"
+    href="/grafana/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="image-gallery"></clr-icon>
@@ -84,7 +84,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.ALTERMANATER' | translate"
-    href="https://192.168.112.26:3045/alertmanager/#/alerts"
+    href="/alertmanager/#/alerts"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="bell"></clr-icon>
@@ -112,7 +112,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.OLDDASHBOARD' | translate"
-    href="https://192.168.112.26:3045/dashboard/#!/login"
+    href="/dashboard/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="vmw-app"></clr-icon>
