fix: rename the path context with bh prefix

--- a/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
+++ b/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
@@ -21,7 +21,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.KUBEAPPS' | translate"
-    href="/appcatalog/#/apps/ns/default"
+    href="/bhappcatalog/#/apps/ns/default"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="blocks-group"></clr-icon>
@@ -38,7 +38,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.LOG' | translate"
-    href="/log/app/logtrail#/?q=kubernetes.container.name:httpbin&h=All&t=Now&i=filebeat-*&_g=()"
+    href="/bhlogger/app/logtrail#/?q=kubernetes.container.name:httpbin&h=All&t=Now&i=filebeat-*&_g=()"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
@@ -66,7 +66,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.PROMETHEUS' | translate"
-    href="/prometheus/"
+    href="/bhprometheus/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="network-globe"></clr-icon>
@@ -75,7 +75,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.GRAFANA' | translate"
-    href="/grafana/"
+    href="/bhgrafana/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="image-gallery"></clr-icon>
@@ -84,7 +84,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.ALTERMANATER' | translate"
-    href="/alertmanager/#/alerts"
+    href="/bhalertmanager/#/alerts"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="bell"></clr-icon>
@@ -112,7 +112,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.OLDDASHBOARD' | translate"
-    href="/dashboard/"
+    href="/bhdashboard/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="vmw-app"></clr-icon>
