fix: merge ops-view address

--- a/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
+++ b/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
@@ -3,7 +3,7 @@
   <a
     clrVerticalNavLink
     [title]="'MENU.KUBEVIEW' | translate"
-    href="http://172.20.27.219:24954/"
+    href="/bhoverview/"
     target="_blank"
     routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="network-switch"></clr-icon>
