fix: merge api portal

--- a/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
+++ b/src/frontend/src/app/portal/sidenav-namespace/sidenav-namespace.component.html
@@ -44,6 +44,36 @@
     <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
     {{'MENU.LOG' | translate}}
   </a>
+
+  <a
+    clrVerticalNavLink
+    [title]="'MENU.DEVELOPER' | translate"
+    href="/developer/"
+    target="_blank"
+    routerLinkActive="active">
+    <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
+    {{'MENU.DEVELOPER' | translate}}
+  </a>
+  <a
+    clrVerticalNavLink
+    [title]="'MENU.PUBLISHER' | translate"
+    href="https://172.20.27.219:30443/publisher"
+    target="_blank"
+    routerLinkActive="active">
+    <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
+    {{'MENU.PUBLISHER' | translate}}
+  </a>
+  <a
+    clrVerticalNavLink
+    [title]="'MENU.STORE' | translate"
+    href="https://172.20.27.219:30443/store"
+    target="_blank"
+    routerLinkActive="active">
+    <clr-icon clrVerticalNavIcon shape="clock"></clr-icon>
+    {{'MENU.STORE' | translate}}
+  </a>
+
+
   <!--<a-->
     <!--clrVerticalNavLink-->
     <!--title="APIKeys"-->
